build_log.txt
release
+- install ghost_sovereign
   +- zig build-exe ghost_sovereign ReleaseFast x86_64-linux-gnu 3 errors
src/routes/z3.zig:2:27: error: no module named 'z3_bridge' available within module ghost_core
const z3_bridge = @import("z3_bridge");
                          ^~~~~~~~~~~
referenced by:
    dispatchConversation: src/routes/z3.zig:45:13
    dispatchConversationTurn: src/gip_dispatch.zig:476:50
    11 reference(s) hidden; use '-freference-trace=13' to see all references
src/verification/z3_bridge.zig:6:11: error: C import failed
const c = @cImport({
          ^~~~~~~~
/home/micah/Desktop/sylorlabs projects/ghost_engine/.zig-cache/o/3ad46444003f24acc2064029c920297e/cimport.h:1:10: error: 'z3.h' file not found
#include <z3.h>
         ^
error: the following command failed with 3 compilation errors:
/opt/zig-0.14.1/zig build-exe -lz3 -lonnxruntime -fstrip -fomit-frame-pointer -OReleaseFast -mcmodel small -target x86_64-linux-gnu -mcpu native -isystem /usr/include -isystem /usr/include/x86_64-linux-gnu -L third_party/onnxruntime/lib -L /usr/lib/x86_64-linux-gnu -rpath third_party/onnxruntime/lib --dep ghost_core --dep domain_inference --dep anchor_discovery --dep semantic_tensor --dep z3_bridge --dep build_options -Mroot=/home/micah/Desktop/sylorlabs projects/ghost_engine/src/main.zig -fstrip -fomit-frame-pointer -OReleaseFast -mcmodel small -target x86_64-linux-gnu -mcpu native -isystem /usr/include -isystem /usr/include/x86_64-linux-gnu -I third_party/onnxruntime/include --dep proof_session --dep build_options=build_options0 -Mghost_core=/home/micah/Desktop/sylorlabs projects/ghost_engine/src/ghost.zig -fstrip -fomit-frame-pointer -OReleaseFast -mcmodel small -target x86_64-linux-gnu -mcpu native -Mdomain_inference=/home/micah/Desktop/sylorlabs projects/ghost_engine/src/domain/inference.zig -fstrip -fomit-frame-pointer -OReleaseFast -mcmodel small -target x86_64-linux-gnu -mcpu native --dep domain_inference -Manchor_discovery=/home/micah/Desktop/sylorlabs projects/ghost_engine/src/analysis/anchors.zig -fstrip -fomit-frame-pointer -OReleaseFast -mcmodel small -target x86_64-linux-gnu -mcpu native --dep domain_inference -Msemantic_tensor=/home/micah/Desktop/sylorlabs projects/ghost_engine/src/semantics/tensor.zig -fstrip -fomit-frame-pointer -OReleaseFast -mcmodel small -target x86_64-linux-gnu -mcpu native --dep anchor_discovery --dep semantic_tensor --dep proof_session -Mz3_bridge=/home/micah/Desktop/sylorlabs projects/ghost_engine/src/verification/z3_bridge.zig -Mbuild_options=/home/micah/Desktop/sylorlabs projects/ghost_engine/.zig-cache/c/ab0d11dd36c10db06eb903563b8884e6/options.zig -fstrip -fomit-frame-pointer -OReleaseFast -mcmodel small -target x86_64-linux-gnu -mcpu native -Mproof_session=/home/micah/Desktop/sylorlabs projects/ghost_engine/src/core/proof_session.zig -Mbuild_options0=/home/micah/Desktop/sylorlabs projects/ghost_engine/.zig-cache/c/ab0d11dd36c10db06eb903563b8884e6/options.zig -lc --cache-dir /home/micah/Desktop/sylorlabs projects/ghost_engine/.zig-cache --global-cache-dir /home/micah/.cache/zig --name ghost_sovereign --zig-lib-dir /opt/zig-0.14.1/lib/ -flto --listen=- 
Build Summary: 4/7 steps succeeded; 1 failed
release transitive failure
+- install ghost_sovereign transitive failure
   +- zig build-exe ghost_sovereign ReleaseFast x86_64-linux-gnu 3 errors
error: the following build command failed with exit code 1:
/home/micah/Desktop/sylorlabs projects/ghost_engine/.zig-cache/o/11a296b7ebff8d80c10ad48486b3a55a/build /opt/zig-0.14.1/zig /opt/zig-0.14.1/lib /home/micah/Desktop/sylorlabs projects/ghost_engine /home/micah/Desktop/sylorlabs projects/ghost_engine/.zig-cache /home/micah/.cache/zig --seed 0x274d64fe -Zfd51086642ae2802 release
